# arpeio-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  HF_DEPLOY.md  LICENSE  README.md  app.py  pyproject.toml  server.json
src/: __init__.py  instructions.py  server.py
src/base/: __init__.py  command_builder.py  error_patterns.py  release_notes_handler.py  version_detector.py
src/doc_search/: __init__.py  cache.py  crawler.py  doc_versions.py  index.py  tools.py
src/fastbcp/: command_builder.py  tools.py  version.py
src/fasttransfer/: command_builder.py  tools.py  validators.py  version.py
src/lakexpress/: __init__.py  command_builder.py  tools.py  validators.py  version.py
src/migratorxpress/: command_builder.py  tools.py  validators.py  version.py
tests/test_doc_search/: test_cache.py  test_crawler.py  test_index.py  test_release_notes.py  test_tools.py
tests/test_fastbcp/: test_command_builder.py  test_validators.py  test_version.py
tests/test_fasttransfer/: test_command_builder.py  test_validators.py  test_version.py
tests/test_lakexpress/: test_command_builder.py  test_validators.py  test_version.py
tests/test_migratorxpress/: test_command_builder.py  test_validators.py  test_version.py
