[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arpeio-mcp"
version = "0.1.0"
description = "Unified MCP server for Arpe.io data tools — FastBCP, FastTransfer, LakeXpress, MigratorXpress"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arpe.io" },
]
keywords = ["mcp", "model-context-protocol", "arpe", "database", "data-export", "data-transfer", "migration", "data-lake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
arpeio-mcp = "src.server:main"

[project.urls]
Homepage = "https://arpe.io"
Repository = "https://github.com/arpe-io/arpeio-mcp"
Issues = "https://github.com/arpe-io/arpeio-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
